# MCP_Tool_Search

./: .editorconfig  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
install/: install.bat  install.sh  mcp_config_writer.py
servers/router_basic/: _router_executor.py  _router_helpers.py  _router_indexer.py  _router_search.py  engine.py  server.py
shared/: file_utils.py  platform_utils.py  progress.py
tests/: conftest.py  test_executor.py  test_indexer.py  test_phase2.py  test_phase3.py  test_search.py  test_standards.py
tests/fixtures/mock_server_a/: pyproject.toml  server.py
tests/fixtures/mock_server_b/: pyproject.toml  server.py
