[project]
name = "mcp-tool-search"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "mcp>=1.0,<2.0",
    "scikit-learn>=1.5",
    "joblib>=1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
exclude = ["tests/fixtures/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "servers"]
